# a88i-claw

./: .dockerignore  .env.example  .gitignore  .oxlintrc.json  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE.old.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.sandbox-browser  Dockerfile.sandbox-common  IMPROVEMENT_PLAN_OPTIMIZATION.md  IMPROVEMENT_PLAN_SECURITY.md  LICENSE  MIGRATION_PLAN_CLI_TO_PYTHON.md  PROJECT_STRUCTURE.md  README.md  SECURITY.md  VISION.md  appcast.xml  autocrab.mjs  autocrab.podman.env  docker-compose.yml  docker-setup.sh  docs.acp.md  fly.private.toml  fly.toml  package.json  pnpm-workspace.yaml  render.yaml  setup-podman.sh  tsconfig.json  tsconfig.plugin-sdk.dts.json  tsdown.config.ts  verify_migration.sh  vitest.config.ts  vitest.e2e.config.ts
autocrab/: =0.1.0  ARCHITECTURE_ORIGINAL.md  ARCHITECTURE_PYTHON.md  README.md  autocrab.db  autocrab_v1.0.0_plan.md  develop_note.md  pyproject.toml  requirements-dev.txt  requirements.txt
autocrab/.sessions/stub-model/: transcript.md
autocrab/.sessions/test-session-graph-1/: transcript.md
autocrab/autocrab/: autocrab.db
autocrab/autocrab/workspace/: MEMORY.md
autocrab/frontend/docs/: brave-search.md  ci.md  date-time.md  index.md  network.md  pi-dev.md  tts.md  vps.md
autocrab/frontend/ui/: index.html  package.json  vite.config.ts
autocrab/skills/bluebubbles/: SKILL.md
autocrab/skills/canvas/: SKILL.md
autocrab/skills/discord/: SKILL.md
autocrab/skills/eightctl/: SKILL.md
autocrab/skills/gemini/: SKILL.md
(+4059 files in other folders)
