[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autocrab"
version = "1.0.0"
description = "AutoCrab: The Agentic AI Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "pydantic>=2.7.4",
    "pydantic-settings>=2.3.4",
    "typer>=0.12.3",
    "sqlalchemy>=2.0.31",
    "langgraph>=0.1.0",
    "langchain-core>=0.2.0",
    "langchain-openai>=0.1.0",
    "docker>=7.1.0",
    "celery>=5.4.0",
    "redis>=5.0.4",
]

[project.scripts]
autocrab = "autocrab.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["autocrab*"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
